# compare-and-accept-skeleton

./: README.md  app.py  pyproject.toml
templates/: index.html
